fix: ensure you can see overflow in code examples and results

--- a/packages/react-saasify/src/components/LiveServiceDemo/styles.module.css
+++ b/packages/react-saasify/src/components/LiveServiceDemo/styles.module.css
@@ -59,7 +59,8 @@
 
 .code {
   height: 396px;
-  overflow: hidden !important;
+  overflow: hidden;
+  overflow-x: auto;
 }
 
 .icons {
